--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@stitches/react": "1.2.8",
     "arweave": "1.13.7",
     "arweave-account": "1.3.4",
     "arweave-graphql": "0.0.5",
